<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout    
    android:id="@+id/RelativeLayout01"    
    android:layout_width="fill_parent"    
    xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_height="wrap_content"    
    android:paddingBottom="4dip"    
    android:paddingLeft="12dip"  
    android:paddingRight="12dip">
	
	<TableLayout android:id="@+id/TableLayout01" 
		android:layout_width="fill_parent" android:layout_height="fill_parent" 
		android:layout_gravity="center"
		xmlns:android="http://schemas.android.com/apk/res/android">
		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView    
    			android:text="@string/order_no"    
    			android:layout_height="wrap_content"    
    			android:textSize="20dip"    
    			android:layout_width="fill_parent"
    		/>
			<TextView    
    			android:text=""    
    			android:layout_height="wrap_content"    
    			android:textSize="20dip"    
    			android:layout_width="fill_parent"    
    			android:id="@+id/OId"  
    		/>
    		<TextView    
    			android:text="@string/item_name"    
    			android:layout_height="wrap_content"    
    			android:textSize="20dip"    
    			android:layout_width="fill_parent"
    		/>
			<TextView    
    			android:text=""    
    			android:layout_height="wrap_content"    
    			android:textSize="20dip"    
    			android:layout_width="fill_parent" 
    			android:layout_below="@+id/ItemId"   
    			android:id="@+id/ItemTitle"  
    		/>
    		<TextView    
    			android:text="@string/item_price"    
    			android:layout_height="wrap_content"    
    			android:textSize="20dip"    
    			android:layout_width="fill_parent"
    		/>
    		<TextView    
    			android:text=""    
    			android:layout_height="wrap_content"    
    			android:textSize="20dip"    
    			android:layout_width="fill_parent" 
    			android:layout_below="@+id/ItemId"   
    			android:id="@+id/ItemPrice"  
    		/> 
    		
		</TableRow>
	</TableLayout>	
</RelativeLayout>
